# dicta

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
docs/: architecture.md  audit.md
scripts/: generate_icons.js
src/: App.svelte  app.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  main.rs  platform.rs  settings_persistence.rs  shortcut.rs  window_overlay.rs
src-tauri/src/audio/: devices.rs  mod.rs  monitor.rs  recorder.rs  resample.rs  wav.rs
src-tauri/src/commands/: audio.rs  mod.rs  settings.rs  window.rs
src-tauri/src/transcription/: mod.rs  postprocessing.rs  stt.rs
src/lib/components/: AboutView.svelte  CommandPalette.svelte  CompactSelect.svelte  DictaLogo.svelte  FloatingWidget.css  FloatingWidget.svelte  HistoryView.svelte  SettingsPanel.css  SettingsPanel.svelte  TopBar.svelte  widgetLayout.ts
src/lib/constants/: models.ts  providers.ts
src/lib/history/: HistoryController.svelte.ts  storage.ts
src/lib/recording/: RecordingController.svelte.ts  status.ts
src/lib/services/: widgetBroadcaster.ts
src/lib/settings/: SettingsSaveQueue.ts  (+6 more)
tests/: accent-theme.test.ts  history-storage.test.ts  hotkey.test.ts  recording-status.test.ts  settings-save-queue.test.ts  settings.test.ts  widget-layout.test.ts
(+48 files in other folders)
