[package]
name = "dicta"
version = "0.2.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["default", "tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tauri-plugin-clipboard-manager = "2"
windows = { version = "0.56", features = [
  "Win32_Graphics_Dwm",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
cpal = "0.15"
base64 = "0.22"
tokio = { version = "1", features = ["time"] }
rubato = "0.15"

[build-dependencies]
tauri-build = { version = "2", features = [] }
